--- a/area_of_circle.ipynb
+++ b/area_of_circle.ipynb
@@ -2,21 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Danial\n"
+      "Enter radius of circle 4\n",
+      "50.24\n"
      ]
     }
    ],
    "source": [
-    "naMe = \"Danial\"\n",
-    "print(naMe)"
+    "radiusOfCircle = float(input(\"Enter radius of circle \"))\n",
+    "areaOfCircle = 3.14 * radiusOfCircle ** 2\n",
+    "print(areaOfCircle)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
