--- a/assignMent no2.ipynb
+++ b/assignMent no2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,10 +55,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1200\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1, 6, -200, 500, 600, 120, 1200, 9, 78, 78, 111, 900]\n",
+    "list.sort(reverse = True)\n",
+    "print(list[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any nuMber : 890\n",
+      "The nuMber 890 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "nuMber = float(input(\"Enter any nuMber : \"))\n",
+    "nuMber = int(nuMber)\n",
+    "\n",
+    "if nuMber % 2 == 0:\n",
+    "    print(\"The nuMber {0} is even\".format(nuMber))\n",
+    "    \n",
+    "else:\n",
+    "    print(\"The nuMber {0} is odd\".format(nuMber))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len([12, True, \"String\", 25.5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [\"String\", True, 12, 10.8, 2]\n",
+    "sum = 0\n",
+    "\n",
+    "for i in list:\n",
+    "    if type(i) == int or type(i) == float:\n",
+    "        sum += i\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "4.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [78, 90, 1000, 2, 10000, 123, 4.99, 6, 5, 4, 0, 1]\n",
+    "list.sort()\n",
+    "for i in list:\n",
+    "    if i < 5:\n",
+    "        print(i)\n",
+    "    \n",
+    "    else:\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
